# calc

./: .vcpkg  CMakeLists.txt  README.md  vcpkg.json
dependencies/wxwidgets/: CMakeLists.txt
inc/: Application.h  Calculation.h  Common.h  MainApp.h  MainFrame.h  main.h
src/: Application.cpp  Application.h  CMakeLists.txt  Calculation.cpp  Calculation.h  Common.cpp  Common.h  MainApp.cpp  MainFrame.cpp  main.cpp
